--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-name: restful-api-nodejs-template
+name: restful-api-nodejs-template # Update with the correct name
 services:
-    YourServiceName:
-        image: YourImageName
-        container_name: YourContainerName
+    YourServiceName: # Update with the name of your service
+        image: YourImageName # Update with the name of your Image
+        container_name: YourContainerName # Update with the name of your container
         ports:
-            - port:port # Optional
+            - 3000:3000 # Update with the correct ports
         volumes:
-            - ./data:/path/to/your/docker/data # Optional
+            - ./src:/home/docker/restful-api-nodejs/app/src # Update with the correct path to your data
         command: unless-stopped
