--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
-name: restful-api-nodejs-template # Update with the correct name
+name: restful-api-nodejs-template  # Nombre descriptivo de tu plantilla
+
 services:
-    YourServiceName: # Update with the name of your service
-        image: YourImageName # Update with the name of your Image
-        container_name: YourContainerName # Update with the name of your container
-        ports:
-            - 3000:3000 # Update with the correct ports
-        volumes:
-            - ./src:/home/docker/restful-api-nodejs/app/src # Update with the correct path to your data
-        command: unless-stopped
+  restful-api:  # Nombre del servicio
+    build:
+      context: .  # Ruta donde se encuentra el Dockerfile
+      dockerfile: Dockerfile  # Nombre del Dockerfile (opcional si se llama "Dockerfile")
+    image: restful-api-nodejs  # Nombre de la imagen generada
+    container_name: restful-api-container  # Nombre del contenedor
+    ports:
+      - "3000:3000"  # Mapea el puerto 3000 del contenedor al puerto 3000 del host
+    volumes:
+      - ./src:/home/docker/restful-api-nodejs/app/src  # Sincroniza la carpeta 'src' local con el contenedor
+    restart: unless-stopped  # Reinicia el contenedor a menos que se detenga manualmente
